bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value abs
    if (abs(n-100)>9 || abs(n-200)>9)
        ^NearHundred:2: error: not found: value abs
    if (abs(n-100)>9 || abs(n-200)>9)
                        ^